<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/small_grean_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/save_me_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"


            android:text="@string/welcome_back"
            android:textColor="#009688"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2.5"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/phoneNum"
            android:background="@drawable/custom_input_box"
            android:paddingStart="12dp"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="phone"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            android:maxLength="8"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/password"
            android:background="@drawable/custom_input_box"
            android:paddingStart="12dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/allowButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:background="@drawable/orange_button"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--Placeholder-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>