<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/small_grean_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/save_me_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/otp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/enter_the_code_sent_to"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:text="@string/resend"
            android:textColor="#009688" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/idEnterCode"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/custom_input_box"
                android:cursorVisible="true"
                android:hint="123456"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:inputType="number"
                android:letterSpacing="1.48"
                android:maxLength="6"
                android:padding="5dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/updateContactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="9dp"
            android:text="@string/update_contact_info"
            android:textColor="#009688"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/allowButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/orange_button"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>