<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/morePageMask"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/more_page_mask"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="-60dp">

                <TextView
                    android:id="@+id/txtFAQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/faq" />

                <TextView
                    android:id="@+id/txtFAQTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/_1_why_do_you_need_my_location" />

                <TextView
                    android:id="@+id/txtFAQAnwser1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally = "false"
                    android:textSize="15sp"
                    android:text="@string/save_me_requires_your_location_data_to_help_our_volunteer_rescuers_save_you_and_also_to_let_other_people_know_you_re_on_the_way_to_rescue_them_don_t_worry_we_only_use_location_when_the_app_is_active" />


        </LinearLayout>

    </LinearLayout>
</FrameLayout>
